# ChangeLog for GLSR
# Copyright 1999-2004 Gentoo Foundation
# Distributed under the terms of the GNU General Public License v2
#
# $Id: ChangeLog,v 1.41 2005/01/25 18:37:35 hadfield Exp $

CURRENT STATUS: Broken. Various templates/modules need updating/fixing to
                work with the new SiteModule backend. Note: some of the
                templates appear have been broken prior to the SiteModule
                rewrite, but somehow worked. 

24 Jan 2004; Scott Hadfield <hadfield@gentoo.org>
 * Initial code for the memberlist page written
 * Added 'location' and 'website' fields to the user table.
 * Fixed some mixed tabs and spaces.

31 Dec 2004; Ian Leitch <port001@gentoo.org>:
 * As a security measure, site modules now have to specify what methods they need to call.

29 Dec 2004; Ian Leitch <port001@gentoo.org>:
 * New site module parent class: pym/SiteModule.py
 * Updated site modules to use new class

28 Dec 2004; Ian Leitch <port001@gentoo.org>:
 * Replace the 'values' method with a class with methods like the 
   old cgi.FieldStorage

24 Dec 2004; Ian Leitch <port001@gentoo.org>:
 * Improved the 'Who Is Online' slightly 
 * Add a 'values' method to the cgi.Request class at runtime.
   Provides an easier way to retrieve form values. 
 * Rewrote the Session module
 * Converted index to use fastcgi
   NOTE: This has broken most modules, though not hard to fix.

21 Dec 2004; Ian Leitch <port001@gentoo.org>:
 * Small fixes

18 Dec 2004; Ian Leitch <port001@gentoo.org>:
 * Fixes in the MySQL module
 * Reworked page/module discovering code. Metadata now in __init__.py

16 Dec 2004; Ian Leitch <port001@gentoo.org>:
 * Added some experimental SQL abstraction code, maybe not of any use in this
   project, but who knows!
 * Revamped the MySQL module
 * Converted admin/Page_Statistics to new module format
   Note: This page will appear broken untill all the modules have been converted 
 * Fixes

15 Dec 2004; Ian Leitch <port001@gentoo.org>: