@@ -2,12 +2,17 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.41 2005/01/25 18:37:35 hadfield Exp $
+# $Id: ChangeLog,v 1.42 2005/01/25 21:25:38 hadfield Exp $
 
 CURRENT STATUS: Broken. Various templates/modules need updating/fixing to
                 work with the new SiteModule backend. Note: some of the
                 templates appear have been broken prior to the SiteModule
                 rewrite, but somehow worked. 
+
+25 Jan 2004; Scott Hadfield <hadfield@gentoo.org>
+ * Template bug fix
+ * Added three default values to each multi-dimentional template loop; _counter,
+   _is_odd, and _is_even.
 
 24 Jan 2004; Scott Hadfield <hadfield@gentoo.org>
  * Initial code for the memberlist page written
